src/objects/brTestEmail__c.object
<CustomObject>
    <description>Emails log for Apex unit tests</description>
    <fields>
        <fullName>EmailBody__c</fullName>
        <label>Email Body</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>EmailTemplate__c</fullName>
        <label>Email Template Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subject__c</fullName>
        <label>Subject</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ToAddresses__c</fullName>
        <label>ToAddresses</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Test Email</label>
    <nameField>
        <displayFormat>te-{00000}</displayFormat>
        <label>Test Email Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Test Emails</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>